; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_so_isdstlocal.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_so_isdstlocal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i64 }
%struct.inpcb = type { i32, i32 }

@PF_INET = common dso_local global i64 0, align 8
@PF_INET6 = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @so_isdstlocal(%struct.socket* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket*, align 8
  %4 = alloca %struct.inpcb*, align 8
  store %struct.socket* %0, %struct.socket** %3, align 8
  %5 = load %struct.socket*, %struct.socket** %3, align 8
  %6 = getelementptr inbounds %struct.socket, %struct.socket* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to %struct.inpcb*
  store %struct.inpcb* %8, %struct.inpcb** %4, align 8
  %9 = load %struct.socket*, %struct.socket** %3, align 8
  %10 = call i64 @SOCK_DOM(%struct.socket* %9)
  %11 = load i64, i64* @PF_INET, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %15 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @inaddr_local(i32 %16)
  store i32 %17, i32* %2, align 4
  br label %29

18:                                               ; preds = %1
  %19 = load %struct.socket*, %struct.socket** %3, align 8
  %20 = call i64 @SOCK_DOM(%struct.socket* %19)
  %21 = load i64, i64* @PF_INET6, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.inpcb*, %struct.inpcb** %4, align 8
  %25 = getelementptr inbounds %struct.inpcb, %struct.inpcb* %24, i32 0, i32 0
  %26 = call i32 @in6addr_local(i32* %25)
  store i32 %26, i32* %2, align 4
  br label %29

27:                                               ; preds = %18
  br label %28

28:                                               ; preds = %27
  store i32 0, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %23, %13
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i64 @SOCK_DOM(%struct.socket*) #1

declare dso_local i32 @inaddr_local(i32) #1

declare dso_local i32 @in6addr_local(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
